--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="contador"></h1>
+    <h1 id="contador">0</h1>
     <button id="positivo">positiva</button>
     <button id="negativo">negativo</button>
 </body>
