--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="contador"></h1>
-    <button id="positivo">positiva</button>
-    <button id="negativo">negativo</button>
+    <!-- <form name="formulario"> -->
+        <h1 id="contador"></h1>
+        <button id="positivo">positiva</button>
+        <button id="negativo">negativo</button>
+    <!-- </form> -->
 </body>
 </html>
