--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <div class="container__fluid">
     <div class="row">
         <div class="col-lg-12 jumbotron">
             <h1 id="contador"></h1>
         </div>
     </div>
-
+</div>
+    <div class="container__fluid">
     <div class="row">
         <div class="col-lg-12 contenedor">
-            <button id="positivo" class="col-lg-6 boton">positiva</button>
-            <button id="negativo" class="col-lg-6 boton">negativo</button>
+            <button id="positivo" class="col-lg-12 boton">positiva</button>
+            <button id="negativo" class="col-lg-12 boton">negativo</button>
         </div>
     </div>
-
+</div>
     <!-- <script src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script> -->
     <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
